Remove information about SSL/TSL Protocols because it is inccorect
There is no way to get the actually enabled SSL/TLS protcols on a system, let along from Python. It's not even possible from the `openssl` command line.
See also #994
And: https://stackoverflow.com/questions/45924030/get-available-ssl-tls-protocols-in-python-2-7

--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -30,7 +30,7 @@
                 <tr>
                     <th scope="row">OpenSSL:</th>
                     <td>
-                        $ssl_version &nbsp; [$ssl_protocols]
+                        $ssl_version
                     </td>
                 </tr>
                 <!--#if not $have_ssl_context#-->
