Allow users to set custom basepath
Closes #904
https://forums.sabnzbd.org/viewtopic.php?f=11&t=22511

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -45,6 +45,7 @@
         // Information we need
         var sabSession = '$session';
         var rootURL = '${root}'
+        var urlBase = '${url_base}'
         var folderBrowseUrl = '${root}tapi?mode=browse&output=json&apikey=$session';
         var folderSeperator = '#if $os.sep == '\\' then '\\\\' else '/'#'
 
