Correctly count all bytes and drop 'missing' use 'mbmissing'
Reporting number of missing articles makes 0 sense, it's the MB that matters.

--- a/interfaces/Plush/templates/queue.tmpl
+++ b/interfaces/Plush/templates/queue.tmpl
@@ -56,7 +56,7 @@
   </td>
 
   <td class="download-title" <!--#if $rating_enable#-->style="width:35%"<!--#end if#-->>
-    <a href="nzb/$slot.nzo_id/" title="$T('status'): $T('post-'+$slot.status)<br/>$T('nzo-age'): $slot.avg_age<br/><!--#if $slot.missing#-->$T('missingArt'): $slot.missing<!--#end if#-->">$slot.filename.replace('.', '.&#8203;').replace('_', '_&#8203;')<!--#if $slot.password#--> /  $slot.password<!--#end if#--></a>
+    <a href="nzb/$slot.nzo_id/" title="$T('status'): $T('post-'+$slot.status)<br/>$T('nzo-age'): $slot.avg_age<br/><!--#if $slot.mbmissing!="0.00"#-->$T('missingArt'): $slot.mbmissing $T('MB')<!--#end if#-->">$slot.filename.replace('.', '.&#8203;').replace('_', '_&#8203;')<!--#if $slot.password#--> /  $slot.password<!--#end if#--></a>
   </td>
 
   <!--#if $rating_enable#-->
