--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -527,6 +527,7 @@ tbody>tr>td:last-child {
 }
 
 .hover-button.glyphicon-play,
+.hover-button.glyphicon-forward,
 .hover-button.glyphicon-stop {
     opacity: 1;
     color: #474747;
