--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -43,6 +43,7 @@
         <script type="text/javascript">
             var apiKey = "$session";
             var displayLang = "$active_lang";
+            var utcOffset = $utc_offset;
             var sabSpeedHistory = [$bytespersec_list];
             var newRelease = "$new_release";
             var newReleaseUrl = "$new_rel_url";
