--- a/interfaces/Plush/templates/static/stylesheets/colorschemes/gold/gold.css
+++ b/interfaces/Plush/templates/static/stylesheets/colorschemes/gold/gold.css
@@ -109,6 +109,11 @@ body {
   font-weight: bold;
 }
 
+#new_release {
+  color: green;
+  font-weight: bold;
+}
+
 #livetip {
   position: absolute;
   background-color: #cfc;
@@ -338,7 +343,6 @@ body {
   clear:left;
   padding: 0 20px 0 25px;
   font-size:90%;
-  font-weight: bold;
 }
 #nav_text_left a, #nav_text_right a {
   color:#000;
@@ -1079,7 +1083,7 @@ tr:hover .history_added { color: black; }
   color: red;
   margin-left: 10px;
 }
-
+ 
 .rating_icon_vision {
   width: 16px;
   height: 16px;
