Make sure users are warned that their settings could be unsafe

--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -1082,6 +1082,12 @@ input[type="checkbox"] {
     color: #666;
 }
 
+.host-warning {
+    color: #404040;
+    margin-left: 7px;
+    top: 3px;
+}
+
 .fileBrowser .glyphicon {
     margin-right: 2px;
     top: 1px;
