--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -253,6 +253,32 @@
     })
     hideOrShowTranslate()
 
+    // Highlight in case user is not safe
+    // So when exposed to internet and no password, no external limit or no username/password
+    var safeCheck = \$('#host, #local_ranges, #inet_exposure, #${pid}_wu, #${pid}_wp')
+    function checkSafety() {
+        if(\$('#host').val() != 'localhost' && \$('#host').val() != '127.0.0.1') {
+            // No limitation on local-network
+            if(!\$('#local_ranges').val() || \$('#inet_exposure').val() > 3) {
+                // And no username and password?
+                if(!\$('#${pid}_wu').val() || !\$('#${pid}_wp').val()) {
+                    // Add warning icon if not there already
+                    if(!\$('.host-warning').length) {
+                        safeCheck.after('<span class="glyphicon glyphicon-alert host-warning"></span>')
+                        \$('.host-warning').tooltip({'title': '$T('checkSafety')'})
+                    }
+                    return
+                }
+            }
+        }
+        // Remove warnings
+        \$('.host-warning').remove()
+        safeCheck.removeClass('host-warning-highlight')
+    }
+    checkSafety()
+    safeCheck.on('change', checkSafety)
+
+    // Click functions
     \$('#apikey, #nzbkey').click(function () { \$(this).select() });
 
     \$('#generate_new_apikey').click(function () {
@@ -329,7 +355,6 @@
             \$('#bandwidth_max_dropdown').val(bandwithLimitText)
         }
     }
-
 
     // Update the value
     \$('#bandwidth_max_value, #bandwidth_max_dropdown').on('change', function() {
