--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -46,7 +46,7 @@
             var sabSpeedHistory = [$bytespersec_list];
             var newRelease = "$new_release";
             var newReleaseUrl = "$new_rel_url";
-            var glitterIsBeta = ("$version".search(/Alpa|Beta|x/)) > 0;
+            var glitterIsBeta = ("$version".search(/[develop|Alpha|Beta|RC]/)) > 0;
             var glitterPreLoadQueue = $preload_queue;
             var glitterPreLoadHistory = $preload_history;
 
