--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -326,6 +326,16 @@
                     <input type="text" name="pushover_device" id="pushover_device" value="$pushover_device" />
                     <span class="desc">$T('explain-pushover_device')</span>
                 </div>
+                <div class="field-pair">
+                    <label class="config" for="pushover_emergency_retry">$T('opt-pushover_emergency_retry')</label>
+                    <input type="text" name="pushover_emergency_retry" id="pushover_emergency_retry" value="$pushover_emergency_retry" />
+                    <span class="desc">$T('explain-pushover_emergency_retry')</span>
+                </div>
+                <div class="field-pair">
+                    <label class="config" for="pushover_emergency_expire">$T('opt-pushover_emergency_expire')</label>
+                    <input type="text" name="pushover_emergency_expire" id="pushover_emergency_expire" value="$pushover_emergency_expire" />
+                    <span class="desc">$T('explain-pushover_emergency_expire')</span>
+                </div>
                 <!--#set $section_label = 'pushover'#-->
                 <!--#for $type in $notify_keys#-->
                     <div class="field-pair">
