Show NZB name from RSS-feed when fetching
Of course not the name of the RSS-feed itself.

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -63,6 +63,7 @@
             glitterTranslate.removeDown = "$T('Glitter-confirmClearDownloads')";
             glitterTranslate.removeDow1 = "$T('Glitter-confirmClear1Download')";
             glitterTranslate.retryAll = "$T('link-retryAll')?";
+            glitterTranslate.fetch = "$T('Glitter-fetch')";
             glitterTranslate.encrypted = "$T('Glitter-encrypted')";
             glitterTranslate.duplicate = "$T('Glitter-duplicate')";
             glitterTranslate.tooLarge = "$T('Glitter-tooLarge')";
