--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -26,7 +26,7 @@
 <!--#end def#-->
 
 <div class="colmask">
-    <form action="saveEmail" method="post" name="fullform" class="fullform" autocomplete="off" novalidate>
+    <form action="saveEmail" method="post" name="fullform" class="fullform" autocomplete="off">
     <input type="hidden" id="session" name="session" value="$session" />
     <input type="hidden" id="ajax" name="ajax" value="1" />
     <div class="section" id="email">
