--- a/interfaces/smpl/templates/main.tmpl
+++ b/interfaces/smpl/templates/main.tmpl
@@ -20,6 +20,7 @@
   <link rel="apple-touch-icon" sizes="152x152" href="./staticcfg/ico/apple-touch-icon-152x152-precomposed.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="./staticcfg/ico/apple-touch-icon-180x180-precomposed.png" />
   <link rel="apple-touch-icon" sizes="192x192" href="./staticcfg/ico/android-192x192.png" />
+  <link rel="mask-icon" href="./staticcfg/ico/safari-pinned-tab.svg" color="#CC8000">
 
   <script type="text/javascript" src="static/MochiKit/MochiKit.js"></script>
   <script type="text/javascript" src="static/PlotKit/PlotKit.js"></script>
