Much nicer icon and colour

--- a/interfaces/Plush/templates/_inc_header.tmpl
+++ b/interfaces/Plush/templates/_inc_header.tmpl
@@ -28,7 +28,7 @@
   <link rel="apple-touch-icon" sizes="152x152" href="${path}staticcfg/ico/apple-touch-icon-152x152-precomposed.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="${path}staticcfg/ico/apple-touch-icon-180x180-precomposed.png" />
   <link rel="apple-touch-icon" sizes="192x192" href="${path}staticcfg/ico/android-192x192.png" />
-  <link rel="mask-icon" href="${path}staticcfg/ico/safari-pinned-tab.svg" color="#CC8000">
+  <link rel="mask-icon" href="${path}staticcfg/ico/safari-pinned-tab.svg" color="#383F45">
 
   <script type="text/javascript" src="${path}static/javascripts/lib.js?$version"></script>
 
