--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -30,7 +30,7 @@
         <link rel="apple-touch-icon" sizes="152x152" href="./staticcfg/ico/apple-touch-icon-152x152-precomposed.png" />
         <link rel="apple-touch-icon" sizes="180x180" href="./staticcfg/ico/apple-touch-icon-180x180-precomposed.png" />
         <link rel="apple-touch-icon" sizes="192x192" href="./staticcfg/ico/android-192x192.png" />
-        <link rel="mask-icon" href="./staticcfg/ico/safari-pinned-tab.svg" color="#CC8000">
+        <link rel="mask-icon" href="./staticcfg/ico/safari-pinned-tab.svg" color="#383F45">
         <link rel="shortcut icon" type="image/ico" href="./staticcfg/ico/favicon.ico?v=$version" data-bind="attr: { 'href': SABIcon }" />
 
         <link rel="stylesheet" type="text/css" href="./static/bootstrap/css/bootstrap.min.css?v=$version" />
