Add 'Accept' to 'From Show SxxEyy'

--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -154,7 +154,7 @@
                                     <option value=">"> $T('rss-atleast')</option>
                                     <option value="<"> $T('rss-atmost')</option>
                                     <option value="F"> $T('rss-from')</option>
-                                    <option value="F"> $T('rss-from-show')</option>
+                                    <option value="F"> $T('rss-from-show') ($T('rss-accept'))</option>
                                 </select>
                             </td>
                             <td>
@@ -226,8 +226,8 @@
                                     <option value="C"> $T('rss-mustcat')</option>
                                     <option value=">"> $T('rss-atleast')</option>
                                     <option value="<"> $T('rss-atmost')</option>
-                                    <option value="S"> $T('rss-from-show')</option>
                                     <option value="F"> $T('rss-from')</option>
+                                    <option value="S"> $T('rss-from-show') ($T('rss-accept'))</option>
                                 </select>
                             </td>
                             <td>
@@ -302,8 +302,8 @@
                                         <option value="C" <!--#if $filter[3]=="C" then 'selected="selected"' else ""#-->> $T('rss-mustcat')</option>
                                         <option value=">" <!--#if $filter[3]==">" then 'selected="selected"' else ""#-->> $T('rss-atleast')</option>
                                         <option value="<" <!--#if $filter[3]=="<" then 'selected="selected"' else ""#-->> $T('rss-atmost')</option>
-                                        <option value="S" <!--#if $filter[3]=="S" then 'selected="selected"' else ""#-->> $T('rss-from-show')</option>
                                         <option value="F" <!--#if $filter[3]=="F" then 'selected="selected"' else ""#-->> $T('rss-from')</option>
+                                        <option value="S" <!--#if $filter[3]=="S" then 'selected="selected"' else ""#-->> $T('rss-from-show') ($T('rss-accept'))</option>
                                     </select>
                                 </td>
                                 <td>
