--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -87,6 +87,7 @@
             glitterTranslate.moreText = "$T('Glitter-more')";
 
             glitterTranslate.status = [];
+            glitterTranslate.status['DirectUnpack'] = "$T('opt-direct_unpack')";
             glitterTranslate.status['Completed'] = "$T('post-Completed')";
             glitterTranslate.status['Failed'] = "$T('post-Failed')";
             glitterTranslate.status['Queued'] = "$T('post-Queued')";
