--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -133,8 +133,8 @@
                     <label data-bind="visible: parent.isMultiEditing()">
                         <input type="checkbox" name="multiedit" title="$T('Glitter-multiSelect')" data-bind="click: parent.addMultiEdit, attr: { 'id': 'multiedit_' + id } " />
                     </label>
-                    <!-- ko if: !isGrabbing()  -->
-                    <div class="dropdown" data-bind="visible: !isGrabbing() && !parent.isMultiEditing()">
+                    <!-- ko if: !isGrabbing() -->
+                    <div class="dropdown" data-bind="visible: !parent.isMultiEditing()">
                         <a href="#" data-toggle="dropdown" data-bind="click: toggleDropdown">
                             <span class="caret"></span>
                         </a>
